# pulse-libre-desktop

./: .gitignore  README.md  main.py  pyproject.toml
docs/: PULSETTO_PROTOCOL.md
