[tool.poetry]
name = "pulsetto-libre-desktop"
version = "0.1.0"
description = ""
authors = ["Juraj Bednar <juraj@bednar.io>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.14"
bleak = "^0.22.3"
kivy = "^2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
